# mcp-weather

./: .editorconfig  .gitignore  DUAL_TRANSPORT.md  README.md  mcp-weather.code-workspace  project.code-workspace  pyproject.toml  weather.py
.devcontainer/: devcontainer.json  onCreateCommand.sh  postCreateCommand.sh  postStartCommand.sh
mcp-client/: README.md  client.py  pyproject.toml
mcp-server/: ARCHITECTURE.md  README.md  pyproject.toml  start-sse.sh  weather.py
mcp-server/src/weather_server/: __init__.py  __main__.py  server.py  weather_api.py  weather_mcp.py  weather_service.py
